--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.14.0",
+    "firebase": "^10.12.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
